# swaggerconfig.json
@@ -100,6 +100,178 @@
         }
       }
     },
+    "/deleteDepartment/{id}" : {
+      "delete" : {
+        "summary" : "",
+        "description" : "",
+        "tags" : ["Department"],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "description" : "department id",
+            "required" : "true"
+          }
+        ],
+        "security" : [{"bearerAuth" : []}],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          },
+          "400" : {
+            "description" : "Not found",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/deleteUser/{id}" : {
+      "delete" : {
+        "summary" : "",
+        "description" : "",
+        "tags" : ["User"],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "description" : "user id",
+            "required" : "true"
+          }
+        ],
+        "security" : [{"bearerAuth" : []}],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          },
+          "400" : {
+            "description" : "Not found",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/changeDepartmentName/{id}" : {
+      "put" : {
+        "summary" : "",
+        "description" : "",
+        "tags" : ["Department"],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "description" : "department id",
+            "required" : "true"
+          }
+        ],
+        "security" : [{"bearerAuth" : []}],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/AlterDepartment"
+              },
+              "examples" : {
+                "user" : {
+                  "value" : {
+                    "departmentName" : "RH"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          },
+          "400" : {
+            "description" : "Not found",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/changeUserInfo/{id}" : {
+      "put" : {
+        "summary" : "",
+        "description" : "",
+        "tags" : ["User"],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "description" : "user id",
+            "required" : "true"
+          }
+        ],
+        "security" : [{"bearerAuth" : []}],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/AlterUser"
+              },
+              "examples" : {
+                "user" : {
+                  "value" : {
+                    "userName" : "NAME 1",
+                    "email" : "test1@email.com",
+                    "password" : "12345678",
+                    "role" : "ADMIN",
+                    "department" : "1"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          },
+          "400" : {
+            "description" : "Not found",
+            "content" : {
+              "application/json" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      }
+    },
     "/findUserByEnterpriseId/{id}" : {
       "get" : {
         "summary" : "",
@@ -321,6 +493,36 @@
           },
           "enterpriseId" : {
             "type" : "number"
+          }
+        }
+      },
+
+      "AlterUser" : {
+        "type" : "object",
+        "properties" : {
+          "userName" : {
+            "type" : "string"
+          },
+          "email" : {
+            "type" : "string"
+          },
+          "password" : {
+            "type" : "string"
+          },
+          "roleTag" : {
+            "type" : "string"
+          },
+          "departmentId" : {
+            "type" : "number"
+          }
+        }
+      },
+
+      "AlterDepartment" : {
+        "type" : "object",
+        "properties" : {
+          "departmentName" : {
+            "type" : "string"
           }
         }
       },
